--- a/public/addDetails.html
+++ b/public/addDetails.html
@@ -126,8 +126,9 @@
         $('#studentForm').on('submit', function (e) {
             e.preventDefault();
 
-            var formData = $(this).serializeArray();
+            var formData = $(this).find(":input:not(:checkbox), :checkbox:checked").serializeArray();
             var sid = formData.find(field => field.name === 'sid').value;
+
 
             $.ajax({
                 url: 'http://localhost:3000/student',
