updated button in landing page and added student.json

--- a/public/Index.html
+++ b/public/Index.html
@@ -48,7 +48,7 @@
                     <option value="Guardian">Guardian</option>
                 </select>
                 <input type="text" id="searchValue" class="form-control" aria-label="Text input with dropdown button">
-                <button class="btn btn-outline-secondary" id="btn-submit" type="submit">Button</button>
+                <button class="btn btn-outline-secondary" id="btn-submit" type="submit">Search  </button>
             </div>
         </form>
     </div>
